src/app/(player)/player/_videoBrowser/shared/seasonList/performanceList/performance.module.scss
.link {
  color: #ffffff;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.container {
  width: 100%;
  padding: 0.5rem;
  display: flex;
  gap: 1rem;
  border-radius: 10px;
  height: 100%;

  &.selected {
    background-color: rgba(255, 255, 255, 0.2);
  }

  h3 {
    font-size: 1rem;
    margin: 0;
  }

  p {
    font-size: 0.8rem;
    margin: 0;
  }
}

.imgContainer {
  border-radius: 10px;
  position: relative;
  display: flex;

  &[data-new="true"]:after {
    content: "New";
    display: block;
    position: absolute;
    top: 4px;
    right: 4px;
    font-size: 0.75rem;
    padding: 0.35rem;
    border-radius: 10px;
    color: #ffffff;
    background-color: rgba(51, 28, 80, 0.7);
    backdrop-filter: blur(5px) brightness(150%);
  }
}

.img {
  width: 100px;
  height: auto;
  border-radius: 10px;
}

.text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

